# spiny-challenge

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml
.github/workflows/: main.yml
app/: Dockerfile  app.py  entrypoint.sh  pull_trends.cron  pull_trends.sh  pyproject.toml  setup.cfg  utils.py
app/tasks/: pull_trends.py
